@@ -5,6 +5,7 @@
 	- get_av_transport() takes and returns a proxy rather than an info
 	  object.
 	- Get/Create the av_transport proxy in the add_media_renderer().
+	- Keep the av_transport's playback state in the treemodel.
 
 2007-12-19  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
